# eclipse_video_maker

./: .gitignore  CMakeLists.txt
src/: example_contours.cpp  helpers.cpp  helpers.h  main_eclipse.cpp
